# internship-finder

./: .gitignore  CLAUDE.md  README.md  profile.example.txt  pyproject.toml
.github/workflows/: ci.yml
src/internship_finder/: __init__.py  dedup.py  filter.py  models.py  render.py  score.py
src/internship_finder/sources/: simplify.py  simplifyjobs.py  vansh_summer2027.py
tests/: test_dedup.py  test_filter.py  test_score.py
